--- a/appinfo.json
+++ b/appinfo.json
@@ -4,7 +4,7 @@
         "configurable"
     ],
     "companyName": "youtux@gmail.com",
-    "longName": "Pebble Shows (pebblejs)",
+    "longName": "Pebble Shows",
     "projectType": "pebblejs",
     "resources": {
         "media": [
@@ -12,6 +12,21 @@
                 "file": "images/menu_icon.png",
                 "menuIcon": true,
                 "name": "IMAGE_MENU_ICON",
+                "type": "png"
+            },
+            {
+                "file": "images/icon_home.png",
+                "name": "ICON_HOME",
+                "type": "png"
+            },
+            {
+                "file": "images/icon_eye.png",
+                "name": "ICON_EYE",
+                "type": "png"
+            },
+            {
+                "file": "images/icon_calendar.png",
+                "name": "ICON_CALENDAR",
                 "type": "png"
             },
             {
@@ -41,8 +56,8 @@
             }
         ]
     },
-    "shortName": "Pebble Shows (pebblejs)",
-    "uuid": "1596d615-c853-438c-9852-df68ce14d915",
+    "shortName": "Shows",
+    "uuid": "6b191602-40c2-454b-9d19-8ff61069d8a5",
     "versionCode": 1,
     "versionLabel": "1.0",
     "watchapp": {
