--- a/appinfo.json
+++ b/appinfo.json
@@ -9,6 +9,11 @@
   "resources": {
     "media": [
       {
+        "file": "images/icon_dismiss.png",
+        "name": "ICON_DISMISS",
+        "type": "png"
+      },
+      {
         "file": "images/menu_icon.png",
         "menuIcon": true,
         "name": "IMAGE_MENU_ICON",
