Pebble Shows is now Shows

--- a/appinfo.json
+++ b/appinfo.json
@@ -4,7 +4,7 @@
     "configurable"
   ],
   "companyName": "youtux@gmail.com",
-  "longName": "Pebble Shows",
+  "longName": "Shows",
   "projectType": "pebblejs",
   "resources": {
     "media": [
