--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,9 @@
 [bumpversion]
 current_version = 2.1
+commit = True
+tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)
-serialize = 
+serialize =
 	{major}.{minor}
 
 [bumpversion:file:appinfo.json]
